Modified gics endpoints.
